--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Lavorare con flussi di lavoro automatizzati",
   "repository": {
     "type": "git",
-    "url": "?.git"
+    "url": "https://github.com/giovanni-aversa/flussodilavoro.git"
   },
   "author": "Giovanni Aversa",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-coffee": "^2.3.4",
     "gulp-util": "^3.0.8"
   }
 }
